--- a/app/templates/components/expenses-.hbs
+++ b/app/templates/components/expenses-.hbs
@@ -2,11 +2,11 @@
 
 <div class="expense">
   title
-  <input type="text" name="" value="">
+  <input type="text" name="title" value="">
   description
-  <textarea name="name" rows="8" cols="80"></textarea>
+  <textarea name="description" rows="8" cols="80"></textarea>
   category
-  <select class="" name="">
+  <select class="" name="category">
     <option value="">category</option>
   </select>
   <button type="button" name="button" {{action 'deleteExpense'}}>deleteExpense</button>
