--- a/app/templates/components/expenses-add.hbs
+++ b/app/templates/components/expenses-add.hbs
@@ -1,10 +1,12 @@
 {{yield}}
 title
-<input type="text" name="" value="">
+<input type="text" name="title" value="">
+price
+<input type="text" name="title" value="">
 description
-<textarea name="name" rows="8" cols="80"></textarea>
+<textarea name="description" rows="8" cols="80"></textarea>
 category
-<select class="" name="">
+<select class="" name="category">
   <option value="">category</option>
 </select>
 <button type="button" name="button" {{action 'addExpense'}}>add</button>
